--- a/hammers/emacs/bootstrap.org
+++ b/hammers/emacs/bootstrap.org
@@ -9,7 +9,7 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 ** 错误提醒相关
    当发生错误的时候，打印错错误的堆栈信息。
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      ;;(setq url-proxy-services '(("https" . "127.0.0.1:1089")
      ;;                        ("http" . "127.0.0.1:1089")))
      (setq debug-on-error t)
@@ -18,7 +18,7 @@
 ** 版本配置
    配置文件使用了一些特性，这些特性在太久的版本上会出现不兼容。对比版本给出相应的提示信息。
 
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      (let ((minver "24.4"))
        (when (version< emacs-version minver)
 	 (error "Your Emacs is too old -- this config requires v%s or higher" minver)))
@@ -28,31 +28,35 @@
 
 ** 系统配置
 
-   #+HEADER: :var conf.d=(or (and (boundp 'm/conf.d) (file-directory-p m/conf.d) m/conf.d) (directory-file-name (expand-file-name user-emacs-directory)))
+   #+HEADER: :var xdg.conf.d=(or (and (boundp 'm/xdg.conf.d) (file-directory-p m/xdg.conf.d) m/xdg.conf.d) (directory-file-name (expand-file-name "~/.config")))
+   #+HEADER: :var xdg.cache.d=(or (and (boundp 'm/xdg.cache.d) (file-directory-p m/xdg.cache.d) m/xdg.cache.d) (directory-file-name (expand-file-name "~/.cache")))
+   #+HEADER: :var xdg.data.d=(or (and (boundp 'm/xdg.data.d) (file-directory-p m/xdg.data.d) m/xdg.data.d) (directory-file-name (expand-file-name "~/.local/share")))
    #+HEADER: :var home.d=(or (and (boundp 'm/home.d) (file-directory-p m/home.d) m/home.d) (directory-file-name (expand-file-name "~")))
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      (defconst m/os
        (let ((os (symbol-name system-type)))
 	 (cond ((string= os "darwin") 'macos)
 	       ((string-prefix-p "gnu" os) 'linux)
 	       ((or (string-prefix-p "ms" os) (string-prefix-p "windows" os)) 'windows))))
 
-     (defvar m/conf.d conf.d)
+     (defvar m/xdg.conf.d xdg.conf.d)
+     (defvar m/xdg.data.d xdg.data.d)
+     (defvar m/xdg.data.d xdg.data.d)
      (defvar m/home.d home.d)
    #+END_SRC
 
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      (global-unset-key (kbd "M-`"))
    #+END_SRC
 
 ** 是否开启离线模式
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      (defvar m/offline 
-       (file-directory-p (expand-file-name "offline" m/conf.d)))
+       (file-directory-p (expand-file-name "emacs/offline" m/xdg.conf.d)))
    #+END_SRC
 
 ** 垃圾回收设置
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      (setq gc-cons-threshold 100000000)
    #+END_SRC
 ** 包管理配置
@@ -61,20 +65,20 @@
 *** 包管理器配置
     Emacs 的包管理器名为：[[http://tromey.com/elpa/][package]]. 但是 package 默认配置插件仓库包含的插件相对较少，我们需要添加一些常用的第三方插件仓库，以便与搜索与安装插件。
 
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
 
 
       (require 'package)
 		    ;;; Install into separate package dirs for each Emacs version, to prevent bytecode incompatibility
       (let ((versioned-package-dir
 	     (expand-file-name (format "elpa-%s.%s" emacs-major-version emacs-minor-version)
-			       m/conf.d)))
+			       m/xdg.conf.d)))
 	(setq package-user-dir versioned-package-dir))
 
       (if m/offline
-	  (setq package-archives `(("gnu" . ,(expand-file-name "offline/gnu" m/conf.d))
-				   ("melpa" . ,(expand-file-name "offline/melpa" m/conf.d))
-				   ("melpa-stable" . ,(expand-file-name "offline/melpa-stable" m/conf.d))))
+	  (setq package-archives `(("gnu" . ,(expand-file-name "emacs/offline/gnu" m/xdg.conf.d))
+				   ("melpa" . ,(expand-file-name "emacs/offline/melpa" m/xdg.conf.d))
+				   ("melpa-stable" . ,(expand-file-name "emacs/offline/melpa-stable" m/xdg.conf.d))))
 	(let* ((no-ssl (and (memq system-type '(windows-nt ms-dos))
 			    (not (gnutls-available-p))))
 	       (proto (if no-ssl "http" "https")))
@@ -99,7 +103,7 @@
     Emacs 常见的配置管理都是先使用包管理器安装对应的包，然后再进行配置。安装包和配置是割裂开的。对于使用多个包的情况，安装包配置会分散到各个地方，安装包相关的配置会变得难以维护。
     [[https://github.com/jwiegley/use-package][use-package]] 提供了一个非常干净简洁的安装包配置的方式。use-package 可以将安装包的配置隔离开，使得 Emacs 配置文件干净简洁。
 
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
       (unless (and 
 	       (package-installed-p 'use-package)
 	       (package-installed-p 'diminish))
@@ -123,13 +127,13 @@
 
 *** 包加载路径配置
     所有的自定义的配置文件都在 emacs 配置文件夹下的 lisp 目录下。所以我们需要将 lisp 目录添加到加载路径中
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
-      (add-to-list 'load-path (expand-file-name "lisp" m/conf.d))
-      (setq custom-file (expand-file-name "custom.el" m/conf.d))
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
+      (add-to-list 'load-path (expand-file-name "emacs/lisp" m/xdg.conf.d))
+      (setq custom-file (expand-file-name "emacs/custom.el" m/xdg.conf.d))
     #+END_SRC
 
 *** 保证永远使用最新的 lisp 配置文件，或者库文件
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
       (use-package auto-compile
 	:ensure t
 	:custom (load-prefer-newer t)
@@ -140,12 +144,12 @@
 
 ** 自定义配置聚合
 
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
-     (defconst m/load-path (list (expand-file-name "lisp" m/conf.d)
-				 (expand-file-name "lsp-ivy" (expand-file-name "3rdparty" m/conf.d))
-				 (expand-file-name "rg.el" (expand-file-name "3rdparty" m/conf.d))
-				 (expand-file-name "librime" (expand-file-name "3rdparty" m/conf.d))
-				 (expand-file-name "liberime" (expand-file-name "3rdparty" m/conf.d))))
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
+     (defconst m/load-path (list (expand-file-name "emacs/lisp" m/xdg.conf.d)
+				 (expand-file-name "lsp-ivy" (expand-file-name "emacs/3rdparty" m/xdg.conf.d))
+				 (expand-file-name "rg.el" (expand-file-name "emacs/3rdparty" m/xdg.conf.d))
+				 (expand-file-name "librime" (expand-file-name "emacs/3rdparty" m/xdg.conf.d))
+				 (expand-file-name "liberime" (expand-file-name "emacs/3rdparty" m/xdg.conf.d))))
      (use-package init-common
        :load-path m/load-path)
      (use-package init-os
@@ -178,6 +182,6 @@
      (use-package init-macros
        :load-path m/load-path)
    #+END_SRC
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/init.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/init.el") :comments link
      (provide 'init)
    #+END_SRC
