--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -12,13 +12,13 @@
     当系统为 macos 时，我们可以通过安装 [[https://github.com/xuchunyang/grab-mac-link.el][grab-mac-link]] 插件来获取 chrome/firefox/safia 中的链接，并且可以选择
     plain/markdown/orgmode 的形式来插入到当前编辑的文件中。
 
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package grab-mac-link
 	:if (eq m/os 'macos))
     #+END_SRC
 
 *** org-mode 代码块异步执行配置
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package ob-async
 	:hook
 	(org-babel-after-execute . org-redisplay-inline-images))
@@ -26,7 +26,7 @@
 
 *** 截屏配置
 
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (defun m/org-screenshot ()
 	"Take a screenshot into a time stamped unique-named file in the
       same directory as the org-buffer and insert a link to this file."
@@ -51,7 +51,7 @@
     #+END_SRC
 
 *** org-mode 配置
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (setq org-agenda-dir (expand-file-name "agendas" m/home.d))
       (use-package org
 	:diminish org-mode
@@ -128,7 +128,7 @@
     #+END_SRC
 
 *** org-mode archive 配置
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (defadvice org-archive-subtree (around fix-hierarchy activate)
 	(let* ((fix-archive-p (and (not current-prefix-arg)
 				   (not (use-region-p))))
@@ -173,7 +173,7 @@
 
 *** org-mode 日程配置
     
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package org
 	:preface
 	(defun m/refile-targets ()
@@ -369,7 +369,7 @@
 		("CARRY/O" . (:foreground "#6272a4" :background "#373844" :weight bold)))))
     #+END_SRC
 *** org-mode capture 配置
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package org
 	:custom
 	(org-capture-templates
@@ -422,7 +422,7 @@
 	    :immediate t :prepend t))))
     #+END_SRC
 *** org-mode capture command line support
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (defmacro letf! (bindings &rest body)
 	"Temporarily rebind function, macros, and advice in BODY.
       Intended as syntax sugar for `cl-letf', `cl-labels', `cl-macrolet', and
@@ -531,7 +531,7 @@
 
     #+END_SRC
 *** org-mode capture command line tool
-    #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/conf.d}/bin/capture") :tangle-mode (identity #o755) :comments link :noweb yes
+    #+BEGIN_SRC shell :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/bin/capture") :tangle-mode (identity #o755) :comments link :noweb yes
       #!/usr/bin/env sh
 
       # Open an org-capture popup frame from the shell. This opens a temporary emacsp
@@ -584,7 +584,7 @@
     #+END_SRC
 
 *** org-mode clock 配置
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package org
 	:custom
 	(org-clock-in-resume t)
@@ -687,7 +687,7 @@
     #+END_SRC
 *** org-mode export 配置
     允许在 org 文件中通过 bind 修改环境中绑定的值。
-    #+BEGIN_SRC elisp :exports code :eval never  :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :exports code :eval never  :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package org
 	:custom
 	(org-export-allow-bind-keywords t))
@@ -695,18 +695,18 @@
 
 *** org-mode ditaa/plantuml 画图
 
-    #+BEGIN_SRC elisp :exports code :eval never :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :exports code :eval never :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package org
 	:custom
-	(org-ditaa-jar-path (expand-file-name "ditaa.jar" m/conf.d))
-	(org-plantuml-jar-path (expand-file-name "plantuml.jar" m/conf.d))
+	(org-ditaa-jar-path (expand-file-name "emacs/ditaa.jar" m/xdg.conf.d))
+	(org-plantuml-jar-path (expand-file-name "emacs/plantuml.jar" m/xdg.conf.d))
 	:config
 	(unless (and (boundp 'org-ditaa-jar-path)
 		     (file-exists-p org-ditaa-jar-path)
 		     (not (file-directory-p org-ditaa-jar-path)))
 	  (let ((jar-name "ditaa.jar")
 		(url "https://github.com/stathissideris/ditaa/releases/download/v0.11.0/ditaa-0.11.0-standalone.jar"))
-	    (setq org-ditaa-jar-path (expand-file-name jar-name m/conf.d))
+	    (setq org-ditaa-jar-path (expand-file-name jar-name m/xdg.conf.d))
 	    (unless (file-exists-p org-ditaa-jar-path)
 	      (url-copy-file url org-ditaa-jar-path))))
 
@@ -715,7 +715,7 @@
 		     (not (file-directory-p org-plantuml-jar-path)))
 	  (let ((jar-name "plantuml.jar")
 		(url "https://downloads.sourceforge.net/project/plantuml/1.2020.2/plantuml.1.2020.2.jar"))
-	    (setq org-plantuml-jar-path (expand-file-name jar-name m/conf.d))
+	    (setq org-plantuml-jar-path (expand-file-name jar-name m/xdg.conf.d))
 	    (unless (file-exists-p org-plantuml-jar-path)
 	      (url-copy-file url org-plantuml-jar-path)))))
 
@@ -729,7 +729,7 @@
     #+END_SRC
 
 *** org-mode graphiz 画图配置
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package graphviz-dot-mode
 	:after org
 	:config
@@ -739,14 +739,14 @@
 	:ensure nil)
     #+END_SRC
 *** org mode 可以拖拽下载
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       ;; Download Drag&Drop images
       (use-package org-download
 	:after org)
     #+END_SRC
 
 *** org mode 图标设置
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       ;; Pretty bullets
       (use-package org-bullets
 	:after org
@@ -758,7 +758,7 @@
     #+END_SRC
 
 *** org-mode 博客
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package ox-gfm)
       (use-package ox-hugo
 	:after (ox org)
@@ -769,7 +769,7 @@
     #+END_SRC
 
 *** org-mode 中文对齐配置
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
       (use-package valign
 	:custom
 	(valign-fancy-bar 't)
@@ -832,6 +832,6 @@
     #+END_SRC
     
 ** provide
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-literate.el") :comments link
      (provide 'init-literate)
    #+END_SRC
