--- a/hammers/emacs/lsp.org
+++ b/hammers/emacs/lsp.org
@@ -10,7 +10,7 @@
 
 ** lsp-mode
 
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-lsp.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-lsp.el") :comments link
      (use-package lsp-mode
        :ensure t
        :custom
@@ -354,7 +354,7 @@
      (which lldb-vscode && ln -s $(which lldb-vscode) ~/.vscode/extensions/llvm-org.lldb-vscode-0.1.0/bin/lldb-vscode) || echo "Please install lldb-vscode"
    #+END_SRC
 
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-lsp.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-lsp.el") :comments link
      (use-package dap-mode
        :custom
        (dap-lldb-debugged-program-function (lambda () (read-file-name "Select file to debug.")))
@@ -376,7 +376,7 @@
    #+END_SRC
 ** company lsp
 
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-lsp.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-lsp.el") :comments link
      (use-package lsp-mode
        :config
        (use-package company
@@ -401,13 +401,13 @@
 	     ("C-c C-p" . m/lsp-ivy-global-workspace-symbol-at-point)))
    #+END_SRC
 
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-lsp.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-lsp.el") :comments link
      (use-package cc-mode
        :bind 
        (:map c-mode-base-map
 	     ("C-c c" . compile)))
    #+END_SRC
 ** provide
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-lsp.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-lsp.el") :comments link
      (provide 'init-lsp)
    #+END_SRC
