--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -21,7 +21,7 @@
     #+END_SRC
 
 *** 默认安装的软件包
-    #+BEGIN_SRC conf :tangle (m/resolve "${m/home.d}/.Brewfile") :exports code :results none :eval never :comments link
+    #+BEGIN_SRC conf :tangle (m/resolve "${m/xdg.conf.d}/homebrew-bundle/Brewfile") :exports code :results none :eval never :comments link
       cask_args appdir: '/Applications'
       tap 'homebrew/cask' if OS.mac?
       tap 'homebrew/bundle'
@@ -148,17 +148,17 @@
     #+END_SRC
 
 *** compile emacs
-    #+BEGIN_SRC conf :tangle (m/resolve "${m/home.d}/.Brewfile") :exports code :results none :eval never :comments link
+    #+BEGIN_SRC conf :tangle (m/resolve "${m/xdg.conf.d}/homebrew-bundle/Brewfile") :exports code :results none :eval never :comments link
       brew 'texinfo'
     #+END_SRC
 
 *** emacs related tools
-    #+BEGIN_SRC conf :tangle (m/resolve "${m/home.d}/.Brewfile") :exports code :results none :eval never :comments link
+    #+BEGIN_SRC conf :tangle (m/resolve "${m/xdg.conf.d}/homebrew-bundle/Brewfile") :exports code :results none :eval never :comments link
       brew 'w3m'
     #+END_SRC
     
 *** emacs email package
-    #+BEGIN_SRC conf :tangle (m/resolve "${m/home.d}/.Brewfile") :exports code :results none :eval never :comments link
+    #+BEGIN_SRC conf :tangle (m/resolve "${m/xdg.conf.d}/homebrew-bundle/Brewfile") :exports code :results none :eval never :comments link
       brew 'isync'
       brew 'notmuch'
       brew 'msmtp'
