--- a/hammers/emacs/completion.org
+++ b/hammers/emacs/completion.org
@@ -9,7 +9,7 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 ** company
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-completion.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-completion.el") :comments link
      (use-package company
        :diminish company-mode
        :bind
@@ -58,7 +58,7 @@
 ** yasnippet
    如果我们需要将在 company 补全的时候，同时使用 yasnippet, 这种时候需要将 yasnippet 的 backend 添加到 company-backends 变量中
 
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-completion.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-completion.el") :comments link
      (use-package yasnippet
        :config
        (use-package yasnippet-snippets
@@ -73,7 +73,7 @@
 	     (append (if (consp backend) backend (list backend))
 		     '(:with company-yasnippet))))
 
-	 :custom (yas-snippet-dirs `(,(expand-file-name "snippets" m/conf.d) ,yasnippet-snippets-dir))
+	 :custom (yas-snippet-dirs `(,(expand-file-name "emacs/snippets" m/xdg.conf.d) ,yasnippet-snippets-dir))
 	 :config
 	 (setq company-backends (mapcar #'company-mode/backend-with-yas company-backends))
 	 (yas-reload-all))
@@ -81,6 +81,6 @@
    #+END_SRC
 
 ** provide
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-completion.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-completion.el") :comments link
      (provide 'init-completion)
    #+END_SRC
