--- a/hammers/emacs/project.org
+++ b/hammers/emacs/project.org
@@ -9,14 +9,14 @@
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
 *** ibuffer
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-project.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-project.el") :comments link
       (use-package ibuffer
 	:bind ("C-x C-b" . ibuffer))
     #+END_SRC
 
 
 *** projectile 
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-project.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-project.el") :comments link
       (use-package projectile
 	:diminish projectile-mode
 	:after counsel
@@ -44,6 +44,6 @@
     #+END_SRC
 
 *** export
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-project.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-project.el") :comments link
       (provide 'init-project)
     #+END_SRC
