--- a/hammers/emacs/terminal.org
+++ b/hammers/emacs/terminal.org
@@ -11,11 +11,11 @@
 ** eshell
 
 *** 环境变量
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
       (setenv "PAGER" "cat")
     #+END_SRC   
 *** 配置选项
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
       (use-package shrink-path)
       (use-package eshell
 	:after shrink-path
@@ -47,7 +47,7 @@
 			  ))))
     #+END_SRC
 *** alias
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
       (use-package eshell
 	:hook
 	(eshell-mode . (lambda() 
@@ -65,14 +65,14 @@
 			   (eshell/alias "ll" (concat ls " -AlohG --color=always"))))))
     #+END_SRC
 *** git
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
       (defun eshell/gst (&rest args)
 	(magit-status (pop args) nil)
 	(eshell/echo)) 
     #+END_SRC
 *** find 命令
     使用命令行程序来进行 find, 而不是使用 eshell 的 find 函数
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
       (defun eshell/find (&rest args)
 	"Wrapper around the ‘find’ executable."
 	(let ((cmd (concat "find " (string-join args " "))))
@@ -115,13 +115,13 @@
 	  (find-file file)))
     #+END_SRC
 *** autojump
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
       (use-package eshell-autojump
 	:custom
-	(eshell-directory-name (expand-file-name "eshell" m/conf.d)))
+	(eshell-directory-name (expand-file-name "emacs/eshell" m/xdg.conf.d)))
     #+END_SRC
 *** eshell toggle window
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
       (use-package eshell-toggle
 	:bind
 	(("s-<f12>" . eshell-toggle)))
@@ -129,7 +129,7 @@
 
 
 *** clear
-    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
       (use-package eshell
 	:config
 	(defun eshell/clear ()
@@ -139,6 +139,6 @@
 	    (eshell-send-input))))
     #+END_SRC
 ** provide
-   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-terminal.el") :comments link
+   #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/xdg.conf.d}/emacs/lisp/init-terminal.el") :comments link
      (provide 'init-terminal)
    #+END_SRC
