--- a/hammers/git/config.org
+++ b/hammers/git/config.org
@@ -24,7 +24,7 @@
 	     (output (string-trim-right (cadr result))))
 	(if (eq status 0) output (read-string "Please input your email: ")))
     #+END_SRC    
-    #+BEGIN_SRC gitconfig :tangle (m/resolve "${m/home.d}/.gitconfig") :tangle-mode (identity #o644) :noweb yes
+    #+BEGIN_SRC gitconfig :tangle (m/resolve "${m/xdg.conf.d}/git/config") :tangle-mode (identity #o644) :noweb yes
       [user]
 	      name = <<username()>>
 	      email = <<email()>>
@@ -40,7 +40,6 @@
 	      ignorecase = false
 	      quotepath = false
 	      pager = less -F -X
-	      excludesfile = ~/.gitignore
 	      whitespace = -trailing-space
 	      editor = vim
       [color]
@@ -63,13 +62,13 @@
       [push]
 	      default = simple
       [commit]
-	      template = ~/.gitcommit.tmpl
+	      template = ~/.config/git/commit.tmpl
       [credential]
 	      helper = store
     #+END_SRC
 
 *** git commit template
-    #+BEGIN_SRC org :tangle "~/.gitcommit.tmpl" :noweb yes :link comment
+    #+BEGIN_SRC org :tangle (m/resolve "${m/xdg.conf.d}/git/commit.tmpl") :noweb yes :link comment
       type
       # Type(<scope>): <subject>
 
@@ -100,7 +99,7 @@
     #+END_SRC
 
 *** git ignore 基本配置
-    #+BEGIN_SRC gitignore :tangle (m/resolve "${m/home.d}/.gitignore")
+    #+BEGIN_SRC gitignore :tangle (m/resolve "${m/xdg.conf.d}/git/ignore")
       ### Clangd ###
       # -*- mode: gitignore; -*-
       .clangd
