--- a/hammers/ssh/config.org
+++ b/hammers/ssh/config.org
@@ -8,29 +8,29 @@
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 *** VPN 设置
-    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/home.d}/.ssh/config") :exports code :eval never  :comments link
+    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") :exports code :eval never  :comments link
       ForwardX11 yes
       RequestTTY yes
       Host vpn.seoul
       HostName 8.8.8.8
       User ec2-user
       Port 22
-      IdentityFile ~/.ssh/keys/vpn.seoul.pem
+      IdentityFile ~/.config/ssh/keys/vpn.seoul.pem
     #+END_SRC
 *** ubuntu parallels
-    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/home.d}/.ssh/config") exports code :eval never :comments link
+    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") exports code :eval never :comments link
       Host ubuntu.parallels
       HostName 192.168.1.103
       User neo
       Port 22
-      IdentityFile ~/.ssh/id_rsa
+      IdentityFile ~/.config/ssh/id_rsa
     #+END_SRC
 *** ubuntu
-    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/home.d}/.ssh/config") exports code :eval never :comments link
+    #+BEGIN_SRC conf :tangle (tangle-if-absent "${m/xdg.conf.d}/ssh/config") exports code :eval never :comments link
       Host ubuntu.trinity
       HostName 192.168.1.106
       User neo
       Port 22
-      IdentityFile ~/.ssh/id_rsa 
+      IdentityFile ~/.config/ssh/id_rsa 
     #+END_SRC
 
