--- a/hammers/vim/vimrc.org
+++ b/hammers/vim/vimrc.org
@@ -8,11 +8,12 @@
 #+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
 #+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 
-#+BEGIN_SRC vimrc :tangle (m/resolve "${m/home.d}/.vimrc")
+#+BEGIN_SRC vimrc :tangle (m/resolve "${m/xdg.conf.d}/vim/vimrc")
   let mapleader=";"
 
   " #################vundel config start #####################
-  set rtp+=~/.vim/Vundle.vim
+  set viminfo+=n~/.config/vim/viminfo
+  set rtp+=~/.config/vim/Vundle.vim
 
   call vundle#begin('~/.config/vim/plugins')
   Plugin 'ctrlp.vim'
